# Code

./: README.md
CPP training/assessment-1/: README.md  T79 CPP Assessment 1.xlsx  studentlist.cpp
CPP training/assessment-1/Q4/: node.cpp  node.h  nodetest.cpp
CPP training/assessment-1/service_manager/: serviceManager.cpp  service_manager.hpp
CPP training/assessment-2/: README.md  a.out  smartPointer.cpp  thread.cpp
CPP training/linux-cpp/: README.md
CPP training/linux-cpp/practice/: Diamod.cpp  FunctionOverRide.cpp  a.out  clasS.cpp  constructor.cpp  operator_overloading.cpp
CPP training/logger_system/: README.md
CPP training/logger_system/SWE1/: SRS_V1_Logger.odt
CPP training/logger_system/SWE2/: Deployment_diagram.xml  SWAD Logging Framework.docx  T79_logger.qea
CPP training/logger_system/SWE3/: CMakeLists.txt  Server  SwDD_Class_diagram_and_Sequence_diagram.docx  server.cpp
CPP training/logger_system/SWE3/config/: logger_config.yaml
CPP training/logger_system/SWE3/docs/: T79_logger.qea
CPP training/logger_system/SWE3/include/: LogConfig.hpp  LogLevel.hpp  LoggingLibrary.hpp  LoggingService.hpp  RemoteLoggingNetwork.hpp
CPP training/logger_system/SWE3/src/: LogConfig.cpp  LogLevel.cpp  LoggingLibrary.cpp  LoggingService.cpp  RemoteLoggingNetwork.cpp  main.cpp
CPP training/logger_system/SWE6/: SWE6_FTE_Logger.ods
CPP training/test files/: a.out
CPP training/test files/CtoCPP/: Fun.c  Fun.h  exec  main.cpp
CPP training/test files/UT/: CMakeLists.txt  a  a.out  my_program.cpp  my_program.hpp  my_test.cpp  my_test.hpp
(+99 files in other folders)
